# VP_Tree_Benchmarks

./: CMakeLists.txt  README.md  build.bat
include/: basic_vp_tree.hpp  brute_force.hpp  omp_vp_tree.hpp  timing.hpp  types.hpp
src/: main.cpp  timing.cpp
